[package]
name = "ae"
version = "0.1.0"
edition = "2021"
authors = ["dravenk <longxianwen@outlook.com>"]
description = "AE."
readme = "README.md"
repository = "https://github.com/dravenk/ae/"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ae"
keywords = ["ae", "data-structure","web3"]

[dependencies]
